<resources>
    <string name="app_name">Petrica</string>
    <string name="login">Sign in</string>
    <string name="no_login">Continue</string>
    <string name="description">For your events and your pleasure</string>
    <string name="err_retry">An error has occurred please try again</string>
    <string name="success_sign">Login successful</string>
    <string name="already_login">You are already login</string>
    <string name="need_sign">You need to sign in to do this</string>
    <string name="need_sign_title">Account necessary</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="home_events_registered">Events you are registered for</string>
    <string name="home_events_coming">Events coming</string>
    <string name="offline_mode">Offline mode is enable\nResults may be not accurate</string>
    <string name="toolbar_home">Home</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_events">Events</string>
    <string name="hello_label">Hello %1$s !</string>
    <string name="no_result">Nothing to show there !</string>
    <string name="need_sign_registered_events">You must be logged in to see your events registered for !</string>
    <string name="err">Error</string>
    <string name="err_404_details">Event not found</string>
    <string name="form_label_orga">Organiser\'s name :</string>
    <string name="form_label_theme">Theme :</string>
    <string name="form_label_date_min">Events happening after : </string>
    <string name="form_label_date_max">Events happening before : </string>
    <string name="form_button_search">Search</string>
    <string name="form_no_result">No results found</string>
    <string name="form_results">Results found : </string>
    <string name="form_label_only_registered">Only show events I\'m registered for</string>
    <string name="detail_theme">Theme : %1$s </string>
    <string name="detail_organiser">Organiser : %1$s</string>
    <string name="detail_remaining_days">Date : %1$s (%2$s day(s) remaining)</string>
    <string name="detail_remaining_zero">Date : %1$s (It\'s today !)</string>
    <string name="detail_remaining_already">Date : %1$s (This event has already happened)</string>
    <string name="detail_zero_registered">Nobody has registered yet</string>
    <string name="detail_some_registered">%1$d have registered for this event</string>
    <string name="detail_register">Register</string>
    <string name="detail_unregister">Unregister</string>
    <string name="detail_rate">Rate this event : </string>
    <string name="detail_avg_rate">Average rating for this event : %1$f </string>
    <string name="detail_avg_rate_not_available">Average rating not yet available</string>
    <string name="detail_err_rate">Impossible to rate this event now : it has not happened yet !</string>
    <string name="detail_comment">Show comments</string>
    <string name="picture_description">Picture describing event</string>
    <string name="detail_rate_successful">You have rated this event !</string>
    <string name="detail_register_successful">You have registered to this event !</string>
    <string name="detail_unrate_successful">Your rating has been removed</string>
    <string name="detail_unregister_successful">You have unregistered to this event</string>
    <string name="notif_event_coming_title">An event is coming !</string>
    <string name="notif_event_coming_body">The event %1$s is about to start !</string>
    <string name="notif_event_finished_title">An event is finished !</string>
    <string name="notif_event_finished_body">The event %1$s just finished !</string>
    <string name="channel_name">Event info</string>
    <string name="detail_no_data">No data available</string>
    <string name="comment_manage">Show only my comments</string>
    <string name="comment_add">Add a comment</string>
    <string name="comment_label_list">Comments on this event :</string>
    <string name="comment_send">Send</string>
    <string name="comment_delete_ask">Do you want to delete this comment ?</string>
    <string name="comment_write_successful">You have write a comment</string>
    <string name="comment_delete_successful">You have delete a comment</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="settings_change_password">Change your password</string>
    <string name="settings_cat_change_password">Change your password (ONLY IF YOU ARE USING AN EMAIL ADDRESS)</string>
    <string name="settings_label_old_password">Old password : </string>
    <string name="settings_label_new_password">New password : </string>
    <string name="settings_label_confirm_password">Confirm new password : </string>
    <string name="settings_cat_delete_account">Delete your account</string>
    <string name="settings_pref_delete_account">Delete your account : this action is irreversible
    and will delete all your registered events and ratings BUT your comments will stay. If you are sure,
    choose OK and reconnect to your account</string>
    <string name="settings_delete_account_successful">Your account has been deleted</string>
    <string name="sign_out_successful">You have sign out</string>
    <string name="settings_password_different">Error : passwords are not the same</string>
    <string name="settings_password_change_successful">Your password has been changed</string>
    <string name="settings_password_change_unsuccessful">Impossible to change your password : Try a stronger new password or retry later</string>
    <string name="settings_password_weak">New password too weak : it must have at least 6 characters and one digit</string>
    <string name="settings_password_incorrect_provider">You can only change your password if you are logged in with an email and password !</string>
    <string name="toolbar_add">Create an event</string>
    <string name="err_permissions">Error : please accept permissions</string>
    <string name="manage_event_button">Manage my events</string>
    <string name="manage_event_create">Create an event</string>
    <string name="manage_event_name">Event name :</string>
    <string name="manage_event_date">Date :</string>
    <string name="manage_event_description">Event description</string>
    <string name="manage_event_add_image">Add an image</string>
    <string name="choose_image">Please choose an image</string>
    <string name="err_name_to_short">Error : Event name must be at least 6 characters long</string>
    <string name="err_description_to_short">Error : description is too short</string>
    <string name="err_no_image">Error : you must choose an image</string>
    <string name="event_write_successful">You have created an event</string>
    <string name="delete_event_title">Delete an event</string>
    <string name="delete_event_message">Delete this event ? This action is irreversible</string>
    <string name="delete_event_successful">You have deleted an event</string>
    <string name="err_not_organiser">Error : you are currently not allowed to create events</string>
    <string name="err_reg">Impossible to register or unregister to this event : it has already happened</string>
    <string name="err_no_conn">Error : no network detected</string>
</resources>