<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toolbar_event"
        android:icon="@drawable/baseline_calendar_today_black_48"
        android:title="@string/toolbar_events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_home"
        android:icon="@drawable/baseline_home_black_48"
        android:title="@string/toolbar_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_setting"
        android:icon="@drawable/baseline_settings_black_48"
        android:title="@string/toolbar_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_add"
        android:icon="@drawable/baseline_add_black_48"
        android:title="@string/toolbar_add"
        app:showAsAction="ifRoom" />
</menu>