<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstActivity">

    <TextView
        android:id="@+id/logo_label"
        android:layout_width="186dp"
        android:layout_height="54dp"
        android:layout_marginTop="264dp"
        android:alpha="0"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:text="@string/login"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_label" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:text="@string/no_login"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_label" />

    <TextView
        android:id="@+id/main_label"
        android:layout_width="223dp"
        android:layout_height="137dp"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_label" />

</androidx.constraintlayout.widget.ConstraintLayout>